media query fix for parallax effect on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -575,6 +575,11 @@ a:hover {
 	margin: 0 1%;
 	padding: 0 5%;
 }
+@media only screen and (max-device-width: 1024px) {
+  	#promo {
+    	background-attachment: fixed !important;
+  	}
+}
 @media (max-width: 1225px) and (min-width: 991px){
 	/*.h3, h3{
 		font-size: 17px !important;
